--- a/app/src/main/res/layout/nav_bar_header.xml
+++ b/app/src/main/res/layout/nav_bar_header.xml
@@ -19,7 +19,8 @@
         android:layout_alignParentBottom="true"
         android:orientation="vertical"
         android:paddingBottom="15dp"
-        android:paddingLeft="15dp">
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp">
 
 
         <TextView
