--- a/app/src/main/res/layout/expense_adapter.xml
+++ b/app/src/main/res/layout/expense_adapter.xml
@@ -12,7 +12,8 @@
             android:layout_height="32dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:layout_gravity="center"
-            android:layout_marginStart="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginLeft="16dp"
             android:text="@string/default_string"
             android:textColor="#000"
             app:layout_constraintRight_toRightOf="parent"
