--- a/app/src/main/res/layout/fragment_expense_edit.xml
+++ b/app/src/main/res/layout/fragment_expense_edit.xml
@@ -20,81 +20,79 @@
             android:id="@+id/txt_expense_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="26dp"
             android:labelFor="@id/etxt_expense_name"
             android:text="@string/expense_name"
-            app:layout_constraintEnd_toStartOf="@+id/etxt_expense_name"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            app:layout_constraintBaseline_toBaselineOf="@+id/etxt_expense_name"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/expense_edit_bar" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <EditText
             android:id="@+id/etxt_expense_name"
-            android:layout_width="300dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="10dp"
             android:ems="10"
             android:imeOptions="actionDone"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/txt_expense_name"
             app:layout_constraintTop_toBottomOf="@id/expense_edit_bar" />
 
         <TextView
             android:id="@+id/txt_expense_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="36dp"
             android:labelFor="@id/etxt_expense_price"
             android:text="@string/expense_price"
-            app:layout_constraintEnd_toStartOf="@+id/etxt_expense_price"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            app:layout_constraintBaseline_toBaselineOf="@+id/etxt_expense_price"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_expense_name" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <EditText
             android:id="@+id/etxt_expense_price"
-            android:layout_width="300dp"
-            android:layout_marginEnd="16dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
             android:layout_marginTop="10dp"
             android:ems="10"
             android:imeOptions="actionDone"
             android:inputType="text"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintLeft_toLeftOf="@+id/etxt_expense_name"
             app:layout_constraintTop_toBottomOf="@+id/etxt_expense_name" />
 
         <TextView
             android:id="@+id/txt_expense_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="36dp"
             android:labelFor="@id/etxt_expense_date"
             android:text="@string/expense_date"
-            app:layout_constraintEnd_toStartOf="@+id/etxt_expense_date"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            app:layout_constraintBaseline_toBaselineOf="@+id/etxt_expense_date"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_expense_price" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <EditText
             android:id="@+id/etxt_expense_date"
-            android:layout_width="300dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_marginTop="10dp"
-            android:ems="10"
             android:clickable="true"
+            android:ems="10"
             android:focusable="false"
             android:inputType="datetime"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintLeft_toLeftOf="@+id/etxt_expense_name"
             app:layout_constraintTop_toBottomOf="@+id/etxt_expense_price" />
 
     </android.support.constraint.ConstraintLayout>
