--- a/app/src/main/res/layout/fragment_goal_edit.xml
+++ b/app/src/main/res/layout/fragment_goal_edit.xml
@@ -11,140 +11,146 @@
         android:layout_height="match_parent">
 
         <!-- Include our standard edit header -->
-        <include layout="@layout/edit_bar"
+        <include
             android:id="@+id/edit_bar_in_goal"
-            />
+            layout="@layout/edit_bar" />
 
 
         <TextView
             android:id="@+id/txt_goal_name"
-            android:labelFor="@+id/etxt_goal_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
+            android:labelFor="@+id/etxt_goal_name"
             android:text="@string/goal_title"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edit_bar_in_goal"/>
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            app:layout_constraintBaseline_toBaselineOf="@+id/etxt_goal_name"
+            app:layout_constraintStart_toStartOf="parent" />
 
 
         <EditText
             android:id="@+id/etxt_goal_name"
-            android:layout_width="280dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="14dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="8dp"
             android:ems="10"
             android:imeOptions="actionDone"
             android:inputType="textPersonName"
-            app:layout_constraintStart_toEndOf="@+id/txt_goal_name"
-            app:layout_constraintTop_toBottomOf="@+id/edit_bar_in_goal"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintLeft_toLeftOf="@+id/etxt_repeat_time"
+            app:layout_constraintTop_toBottomOf="@+id/edit_bar_in_goal" />
 
         <TextView
             android:id="@+id/txt_start_date"
-            android:labelFor="@+id/etxt_start_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
+            android:labelFor="@+id/etxt_start_date"
             android:text="@string/goal_start_date"
             android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_goal_name" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            app:layout_constraintBaseline_toBaselineOf="@+id/etxt_start_date"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <EditText
             android:id="@+id/etxt_start_date"
-            android:layout_width="250dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="8dp"
+            android:clickable="true"
             android:ems="10"
+            android:focusable="false"
             android:imeOptions="actionDone"
             android:inputType="datetime"
-            android:focusable="false"
-            android:clickable="true"
-            app:layout_constraintStart_toEndOf="@+id/txt_start_date"
-            app:layout_constraintTop_toBottomOf="@+id/txt_goal_name" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintLeft_toLeftOf="@+id/etxt_repeat_time"
+            app:layout_constraintTop_toBottomOf="@+id/etxt_goal_name" />
 
         <TextView
             android:id="@+id/txt_end_date"
-            android:labelFor="@+id/etxt_end_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
             android:layout_marginStart="16dp"
+            android:labelFor="@+id/etxt_end_date"
             android:text="@string/goal_end_date"
             android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@+id/txt_start_date"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            app:layout_constraintBaseline_toBaselineOf="@+id/etxt_end_date"
             app:layout_constraintStart_toStartOf="parent" />
 
 
         <EditText
             android:id="@+id/etxt_end_date"
-            android:layout_width="250dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="8dp"
+            android:clickable="true"
             android:ems="10"
             android:focusable="false"
-            android:clickable="true"
             android:inputType="datetime"
-            app:layout_constraintStart_toEndOf="@+id/txt_end_date"
-            app:layout_constraintTop_toBottomOf="@+id/txt_start_date" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintLeft_toLeftOf="@+id/etxt_repeat_time"
+            app:layout_constraintTop_toBottomOf="@+id/etxt_start_date" />
 
 
         <TextView
             android:id="@+id/txt_repeat_time"
-            android:labelFor="@+id/etxt_repeat_time"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="18dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginTop="32dp"
+            android:labelFor="@+id/etxt_repeat_time"
             android:text="@string/goal_repeat_times"
             android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@id/txt_end_date"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            app:layout_constraintBaseline_toBaselineOf="@+id/etxt_repeat_time"
             app:layout_constraintLeft_toLeftOf="parent" />
 
 
         <EditText
             android:id="@+id/etxt_repeat_time"
-            android:layout_width="225dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
             android:ems="10"
             android:inputType="number"
-            app:layout_constraintLeft_toRightOf="@id/txt_repeat_time"
-            app:layout_constraintTop_toBottomOf="@+id/txt_end_date" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/txt_repeat_time"
+            app:layout_constraintTop_toBottomOf="@+id/etxt_end_date" />
 
 
         <TextView
             android:id="@+id/txt_goal_details"
-            android:labelFor="@+id/etxt_goal_details"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="8dp"
+            android:labelFor="@+id/etxt_goal_details"
             android:text="@string/goal_details"
             android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@+id/txt_repeat_time"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            app:layout_constraintTop_toBottomOf="@+id/etxt_repeat_time" />
 
         <EditText
             android:id="@+id/etxt_goal_details"
-            android:layout_width="320dp"
-            android:layout_height="73dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
             android:ems="10"
-            android:layout_marginLeft="16dp"
             android:imeOptions="actionDone"
             android:inputType="textImeMultiLine"
             android:maxLines="4"
-            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/txt_goal_details"/>
+            app:layout_constraintTop_toBottomOf="@+id/txt_goal_details" />
 
 
     </android.support.constraint.ConstraintLayout>
