--- a/app/src/main/res/layout/fragment_sales_edit.xml
+++ b/app/src/main/res/layout/fragment_sales_edit.xml
@@ -12,8 +12,9 @@
         android:layout_height="match_parent">
 
         <!-- Include our standard edit header -->
-        <include layout="@layout/edit_bar"
-            android:id="@+id/edit_bar_in_sales"
+        <include
+            layout="@layout/edit_bar"
+            android:id="@+id/sales_edit_bar"
             />
 
         <TextView
@@ -21,90 +22,89 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="16dp"
             android:text="@string/sale_service"
             android:textStyle="bold"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edit_bar_in_sales" />
+            app:layout_constraintTop_toBottomOf="@+id/sales_edit_bar" />
 
 
         <Spinner
             android:id="@+id/spinner_sales_type"
-            android:layout_width="230dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_service_type" />
+            android:layout_marginTop="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/txt_service_type"
+            app:layout_constraintTop_toBottomOf="@+id/sales_edit_bar" />
 
         <TextView
             android:id="@+id/txt_sale_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
+            android:labelFor="@id/etxt_sale_date"
             android:text="@string/salesDate"
             android:textStyle="bold"
-            android:labelFor="@id/etxt_sale_date"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            app:layout_constraintBaseline_toBaselineOf="@+id/etxt_sale_date"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spinner_sales_type" />
+            app:layout_constraintStart_toStartOf="parent" />
 
 
         <EditText
             android:id="@+id/etxt_sale_date"
-            android:layout_width="211dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="0dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="16dp"
             android:clickable="true"
             android:ems="10"
             android:focusable="false"
             android:inputType="datetime"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_sale_date" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintLeft_toLeftOf="@+id/spinner_sales_type"
+            app:layout_constraintTop_toBottomOf="@+id/spinner_sales_type" />
 
 
         <TextView
             android:id="@+id/txt_sales_price"
             android:layout_width="72dp"
             android:layout_height="23dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginStart="16dp"
             android:labelFor="@id/etxt_sale_price"
             android:text="@string/salesPrice"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spinner_sales_type" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            app:layout_constraintBaseline_toBaselineOf="@+id/etxt_sale_price"
+            app:layout_constraintStart_toStartOf="parent" />
 
 
         <TextView
             android:id="@+id/txt_service_dollar_sign"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="18dp"
+            android:layout_height="33dp"
             android:text="@string/dollar_sign"
-            android:layout_marginTop="8dp"
-            android:layout_marginStart="80dp"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@id/etxt_sale_date"
-            app:layout_constraintTop_toBottomOf="@+id/txt_sale_date"
-            />
-
+            app:layout_constraintBaseline_toBaselineOf="@+id/etxt_sale_price"
+            app:layout_constraintStart_toStartOf="@+id/etxt_sale_price" />
 
 
         <EditText
             android:id="@+id/etxt_sale_price"
-            android:layout_width="60dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginTop="0dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="16dp"
             android:ems="10"
             android:inputType="numberDecimal"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_sale_date"
-            />
+            app:layout_constraintLeft_toLeftOf="@+id/spinner_sales_type"
+            app:layout_constraintTop_toBottomOf="@+id/etxt_sale_date" />
 
 
     </android.support.constraint.ConstraintLayout>
