--- a/app/src/main/res/layout/fragment_appointment_edit.xml
+++ b/app/src/main/res/layout/fragment_appointment_edit.xml
@@ -117,7 +117,7 @@
         <EditText
             android:id="@+id/etxt_appointment_date"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="43dp"
             android:layout_marginEnd="16dp"
             android:layout_marginTop="16dp"
             android:clickable="true"
@@ -187,22 +187,22 @@
             android:text="@string/dollar_sign"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/etxt_price"
-            tools:layout_editor_absoluteY="336dp" />
+            app:layout_constraintBaseline_toBaselineOf="@+id/txt_price"
+            app:layout_constraintStart_toStartOf="@+id/etxt_price" />
 
 
         <EditText
             android:id="@+id/etxt_price"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
+            android:layout_marginTop="16dp"
             android:ems="10"
             android:focusable="false"
             android:imeOptions="actionDone"
             android:inputType="numberDecimal"
-            app:layout_constraintBaseline_toBaselineOf="@+id/textView"
             app:layout_constraintEnd_toStartOf="@+id/chk_showed_up"
-            app:layout_constraintLeft_toLeftOf="@+id/spinner_sales_type" />
+            app:layout_constraintLeft_toLeftOf="@+id/spinner_sales_type"
+            app:layout_constraintTop_toBottomOf="@+id/spinner_sales_type" />
 
 
         <CheckBox
