added warning in appmodule gradle

--- a/app/src/main/res/layout/fragment_appointments_list.xml
+++ b/app/src/main/res/layout/fragment_appointments_list.xml
@@ -24,7 +24,14 @@
         <ListView
             android:id="@+id/appointment_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginTop="8dp"
+            android:divider="@null"
+            android:dividerHeight="8dp"
+            android:background="@android:color/transparent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            >
 
         </ListView>
 
