--- a/app/src/main/res/layout/appointment_adapter.xml
+++ b/app/src/main/res/layout/appointment_adapter.xml
@@ -1,49 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:layout_height="match_parent">
 
 
-    <TextView
-        android:id="@+id/appointment_adapter_title"
-        android:layout_width="fill_parent"
-        android:layout_height="32dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
         android:layout_gravity="center"
-        android:layout_marginStart="16dp"
-        android:text="@string/default_string"
-        android:textColor="#000"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        card_view:cardElevation="4dp"
+        card_view:cardBackgroundColor="#f8f8f9"
+        card_view:cardCornerRadius="4dp"
+        card_view:layout_constraintTop_toTopOf="parent"
+        card_view:layout_constraintStart_toStartOf="parent"
+        card_view:layout_constraintEnd_toEndOf="parent">
 
-    <TextView
-        android:id="@+id/appointment_adapter_service"
-        android:layout_width="wrap_content"
-        android:layout_height="32dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:layout_gravity="center"
-        android:layout_marginStart="16dp"
-        android:text="@string/default_string"
-        android:textColor="#000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/appointment_adapter_title" />
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/appointment_adapter_date_time"
-        android:layout_width="wrap_content"
-        android:layout_height="32dp"
-        android:layout_gravity="center"
-        android:gravity="right"
-        android:layout_marginEnd="16dp"
-        android:text="@string/default_string"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="#000"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/appointment_adapter_title" />
+            <TextView
+                android:id="@+id/appointment_adapter_title"
+                android:layout_width="fill_parent"
+                android:layout_height="32dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:layout_gravity="center"
+                android:layout_marginStart="16dp"
+                android:text="@string/default_string"
+                android:textColor="#000"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+            <TextView
+                android:id="@+id/appointment_adapter_date_time"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:layout_gravity="center"
+                android:gravity="right"
+                android:layout_marginEnd="16dp"
+                android:text="@string/default_string"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColor="#000"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/appointment_adapter_title" />
+
+            <TextView
+                android:id="@+id/appointment_adapter_service"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:layout_gravity="center"
+                android:layout_marginStart="16dp"
+                android:text="@string/default_string"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColor="#000"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/appointment_adapter_title" />
+
+        </android.support.constraint.ConstraintLayout>
+
+
+
+    </android.support.v7.widget.CardView>
+
 </android.support.constraint.ConstraintLayout>
+
+
+
