--- a/app/src/main/res/layout/fragment_goal_list.xml
+++ b/app/src/main/res/layout/fragment_goal_list.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.example.evans.ui.CustomersListFragment"
+    tools:context="com.example.evans.ui.ListFragments.CustomersListFragment"
     android:background="#ffffff">
 
     <android.support.constraint.ConstraintLayout
