--- a/app/src/main/res/layout/fragment_sales_list.xml
+++ b/app/src/main/res/layout/fragment_sales_list.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.evans.ui.SalesListFragment"
+    tools:context="com.example.evans.ui.ListFragments.SalesListFragment"
     android:background="#ffffff">
 
     <android.support.constraint.ConstraintLayout
