--- a/app/src/main/res/layout/fragment_customer_view.xml
+++ b/app/src/main/res/layout/fragment_customer_view.xml
@@ -16,9 +16,10 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="36dp"
-            android:text="@string/customer_name"
+            android:layout_marginTop="24dp"
             android:labelFor="@id/etxt_name"
+            android:text="@string/customer_name"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -29,9 +30,10 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="36dp"
-            android:text="@string/customer_phone"
+            android:layout_marginTop="24dp"
             android:labelFor="@id/etxt_phone"
+            android:text="@string/customer_phone"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_view_name" />
@@ -42,9 +44,10 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="36dp"
-            android:text="@string/customer_email"
+            android:layout_marginTop="24dp"
             android:labelFor="@id/etxt_email"
+            android:text="@string/customer_email"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_view_phone" />
@@ -53,32 +56,21 @@
             android:id="@+id/btn_set_appt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="24dp"
             android:text="@string/set_appt"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_view_phone"
-            app:layout_constraintVertical_bias="0.215" />
+            app:layout_constraintTop_toBottomOf="@+id/txt_view_email" />
 
         <Button
             android:id="@+id/btn_save_edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="24dp"
             android:text="@string/button_edit"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.723"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/btn_set_appt"
-            app:layout_constraintTop_toBottomOf="@+id/txt_view_phone"
-            app:layout_constraintVertical_bias="0.216" />
+            app:layout_constraintTop_toBottomOf="@+id/txt_view_email" />
     </android.support.constraint.ConstraintLayout>
 
     <!-- TODO next appointment portion -->
