--- a/app/src/main/res/layout/fragment_financial_report.xml
+++ b/app/src/main/res/layout/fragment_financial_report.xml
@@ -9,31 +9,58 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <EditText
-            android:id="@+id/etxt_fin_rep_end"
-            android:layout_width="150dp"
+        <LinearLayout
+            android:id="@+id/lin_lay_dates"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+
+            <EditText
+                android:id="@+id/etxt_fin_rep_start"
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:ems="10"
+                android:hint="@string/fin_rep_start_date"
+                android:inputType="datetime"
+                app:layout_constraintEnd_toStartOf="@+id/etxt_fin_rep_end"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/etxt_fin_rep_end"
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:layout_marginTop="16dp"
+                android:clickable="true"
+                android:ems="10"
+                android:focusable="false"
+                android:hint="@string/fin_rep_end_date"
+                android:inputType="datetime"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/etxt_fin_rep_start"
+                app:layout_constraintTop_toTopOf="parent" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/bttn_fin_rep_cancel"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_marginTop="16dp"
-            android:clickable="true"
-            android:ems="10"
-            android:focusable="false"
-            android:hint="@string/fin_rep_end_date"
-            android:inputType="datetime"
+            android:text="@string/bttn_calculate"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <EditText
-            android:id="@+id/etxt_fin_rep_start"
-            android:layout_width="150dp"
-            android:layout_height="45dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:ems="10"
-            android:hint="@string/fin_rep_start_date"
-            android:inputType="datetime"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/lin_lay_dates" />
 
         <TextView
             android:id="@+id/txt_fin_rep_profit"
@@ -50,13 +77,15 @@
 
         <EditText
             android:id="@+id/etxt_fin_rep_profit"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:ems="10"
             android:inputType="text"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/txt_fin_rep_profit"
             app:layout_constraintTop_toBottomOf="@+id/bttn_fin_rep_cancel" />
 
         <TextView
@@ -74,13 +103,14 @@
 
         <EditText
             android:id="@+id/etxt_fin_rep_cost"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_marginTop="16dp"
             android:ems="10"
             android:inputType="text"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/etxt_fin_rep_profit"
             app:layout_constraintTop_toBottomOf="@+id/etxt_fin_rep_profit" />
 
         <TextView
@@ -98,24 +128,15 @@
 
         <EditText
             android:id="@+id/etxt_fin_rep_net"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_marginTop="16dp"
             android:ems="10"
             android:inputType="text"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/etxt_fin_rep_profit"
             app:layout_constraintTop_toBottomOf="@+id/etxt_fin_rep_cost" />
-
-        <Button
-            android:id="@+id/bttn_fin_rep_cancel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginTop="16dp"
-            android:text="@string/bttn_calculate"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etxt_fin_rep_end" />
 
     </android.support.constraint.ConstraintLayout>
 </FrameLayout>
