--- a/app/src/main/res/layout/fragment_goal_view.xml
+++ b/app/src/main/res/layout/fragment_goal_view.xml
@@ -12,83 +12,67 @@
 
         <TextView
             android:id="@+id/txt_goal_view_name"
-            android:layout_width="324dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             android:text="@string/goal_title"
             android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/txt_goal_view_startD"
-            android:layout_width="138dp"
-            android:layout_height="31dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/goal_start_date"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/goal_done_box"
-            app:layout_constraintEnd_toStartOf="@+id/txt_goal_view_endD"
-            app:layout_constraintHorizontal_bias="0.406"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_goal_detail"
-            app:layout_constraintVertical_bias="0.338" />
-
-        <TextView
-            android:id="@+id/txt_goal_view_endD"
-            android:layout_width="131dp"
-            android:layout_height="33dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="36dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/goal_end_date"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/goal_done_box"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_goal_detail"
-            app:layout_constraintVertical_bias="0.35" />
-
-        <TextView
             android:id="@+id/txt_goal_detail"
-            android:layout_width="321dp"
-            android:layout_height="66dp"
-            android:layout_marginEnd="8dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
             android:text="@string/goal_details"
             android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.51"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_goal_view_name" />
+
+        <TextView
+            android:id="@+id/txt_goal_view_start_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
+            android:text="@string/goal_start_date"
+            android:textSize="20sp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txt_goal_detail" />
+
+        <TextView
+            android:id="@+id/txt_goal_view_end_date"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="24dp"
+            android:text="@string/goal_end_date"
+            android:textSize="20sp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txt_goal_detail" />
+
+
 
         <CheckBox
             android:id="@+id/goal_done_box"
             android:layout_width="120dp"
             android:layout_height="33dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="36dp"
-            android:layout_marginTop="52dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
             android:text="@string/done"
             android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.436"
-            app:layout_constraintLeft_toLeftOf="parent"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_goal_detail"
-            app:layout_constraintVertical_bias="0.15" />
+            app:layout_constraintTop_toBottomOf="@+id/txt_goal_view_start_date" />
     </android.support.constraint.ConstraintLayout>
 </FrameLayout>
