--- a/app/src/main/res/layout/fragment_sale_edit.xml
+++ b/app/src/main/res/layout/fragment_sale_edit.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.evans.ui.EditFragments.SalesEditFragment">
+    tools:context="com.example.evans.ui.EditFragments.SaleEditFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -14,7 +14,7 @@
         <!-- Include our standard edit header -->
         <include
             layout="@layout/edit_bar"
-            android:id="@+id/sales_edit_bar"
+            android:id="@+id/sale_edit_bar"
             />
 
         <TextView
@@ -27,11 +27,11 @@
             android:textStyle="bold"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/sales_edit_bar" />
+            app:layout_constraintTop_toBottomOf="@+id/sale_edit_bar" />
 
 
         <Spinner
-            android:id="@+id/spinner_sales_type"
+            android:id="@+id/spinner_sale_type"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
@@ -39,7 +39,7 @@
             android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/txt_service_type"
-            app:layout_constraintTop_toBottomOf="@+id/sales_edit_bar" />
+            app:layout_constraintTop_toBottomOf="@+id/sale_edit_bar" />
 
         <TextView
             android:id="@+id/txt_sale_date"
@@ -47,7 +47,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:labelFor="@id/etxt_sale_date"
-            android:text="@string/salesDate"
+            android:text="@string/sale_date"
             android:textStyle="bold"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             app:layout_constraintBaseline_toBaselineOf="@+id/etxt_sale_date"
@@ -66,17 +66,17 @@
             android:focusable="false"
             android:inputType="datetime"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintLeft_toLeftOf="@+id/spinner_sales_type"
-            app:layout_constraintTop_toBottomOf="@+id/spinner_sales_type" />
+            app:layout_constraintLeft_toLeftOf="@+id/spinner_sale_type"
+            app:layout_constraintTop_toBottomOf="@+id/spinner_sale_type" />
 
 
         <TextView
-            android:id="@+id/txt_sales_price"
+            android:id="@+id/txt_sale_price"
             android:layout_width="72dp"
             android:layout_height="23dp"
             android:layout_marginStart="16dp"
             android:labelFor="@id/etxt_sale_price"
-            android:text="@string/salesPrice"
+            android:text="@string/sale_price"
             android:textStyle="bold"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             app:layout_constraintBaseline_toBaselineOf="@+id/etxt_sale_price"
@@ -103,7 +103,7 @@
             android:ems="10"
             android:inputType="numberDecimal"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintLeft_toLeftOf="@+id/spinner_sales_type"
+            app:layout_constraintLeft_toLeftOf="@+id/spinner_sale_type"
             app:layout_constraintTop_toBottomOf="@+id/etxt_sale_date" />
 
 
