--- a/app/src/main/res/layout/fragment_sale_list.xml
+++ b/app/src/main/res/layout/fragment_sale_list.xml
@@ -1,9 +1,9 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.example.evans.ui.ListFragments.AppointmentsListFragment"
+    tools:context="com.example.evans.ui.ListFragments.SaleListFragment"
     android:background="#ffffff">
 
     <android.support.constraint.ConstraintLayout
@@ -11,30 +11,21 @@
         android:layout_height="match_parent">
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/floating_add_btn_appointment"
+            android:id="@+id/floating_sale_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:layout_marginRight="16dp"
+            android:backgroundTint="@color/colorAccent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="16dp"
-            app:srcCompat="@drawable/ic_add_black_24dp"
-            android:backgroundTint="@color/colorAccent"/>
+            app:srcCompat="@drawable/ic_add_black_24dp" />
 
         <ListView
-            android:id="@+id/appointment_list"
+            android:id="@+id/sale_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="8dp"
-            android:divider="@null"
-            android:dividerHeight="8dp"
-            android:background="@android:color/transparent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            >
-
+            android:layout_height="match_parent">
         </ListView>
-
     </android.support.constraint.ConstraintLayout>
 
 </FrameLayout>
